@@ -24,6 +24,10 @@ public class ByteArrayType extends BaseDataType {
 		super(SqlType.BYTE_ARRAY, new Class<?>[0]);
 	}
 
+	protected ByteArrayType(SqlType sqlType, Class<?>[] classes) {
+		super(sqlType, classes);
+	}
+
 	@Override
 	public Object parseDefaultString(FieldType fieldType, String defaultStr) throws SQLException {
 		throw new SQLException("byte[] type cannot have default values");
