@@ -19,6 +19,10 @@ public class LongType extends LongObjectType {
 		super(SqlType.LONG, new Class<?>[] { long.class });
 	}
 
+	protected LongType(SqlType sqlType, Class<?>[] classes) {
+		super(sqlType, classes);
+	}
+
 	@Override
 	public boolean isPrimitive() {
 		return true;
